Change cross icon, fix expanded navbar size on mobile, change mobile scrollPoint

--- a/components/C01-Navigation/C01Navigation.module.scss
+++ b/components/C01-Navigation/C01Navigation.module.scss
@@ -24,7 +24,8 @@
   display: flex;
   width: 100%;
   height: auto;
-  max-height: 100vh;
+  //max-height: 100vh;
+  max-height: calc(var(--vh, 1vh) * 100);
   color: $gray-2;
   top: 0;
   position: fixed;
@@ -111,7 +112,7 @@
 
   &.isOpen {
     background-attachment: fixed;
-    height: 100vh;
+    height: calc(var(--vh, 1vh) * 100);
     @include makeVisible;
 
     @include respond-to(minWidth768) {
@@ -148,6 +149,7 @@
   position: relative;
   font-weight: 400;
   color: $blue;
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
 
   &:focus {
     outline: none;
@@ -166,8 +168,9 @@
 
   .crossIcon {
     position: absolute;
-    font-size: 24px;
-    top: 3px;
+    font-family: ui-rounded;
+    font-size: 28px;
+    top: 2px;
     transform: translateX(20px);
     opacity: 0;
     transition: all 0.3s linear;
